<resources>
    <string name="app_name">MedicalTraining</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nurse">Nurse</string>
    <string name="receptionist">Receptionist</string>
    <string name="doctor">Doctor</string>
    <string name="prototype_map">Prototype Map</string>
    <string name="analysis_employee">Analysis Employee</string>
    <string name="manger">Manger</string>
    <string name="hr">HR</string>
    <string name="loading">Loading ...</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="to_continue_login_now">To Continue , Login Now</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="calls">Calls</string>
    <string name="reports">Reports</string>
    <string name="tasks">Tasks</string>
    <string name="attendance_leaving">attendance - leaving</string>
</resources>